# THU_Graphics

code/: CMakeLists.txt  run_all.sh  test  test.cpp
code/include/: bvhtree.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  image.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ppm.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
code/src/: bvhtree.cpp  hit.cpp  image.cpp  kdtree.cpp  main.cpp  mesh.cpp  ppm.cpp  scene_parser.cpp  texture.cpp
code/testcases/: mov.txt  ppm.txt  scene01_basic.txt  scene10_wineglass.txt  smallpt.txt  tuzi__.txt  water2.txt  zg_len.txt
